# rimas

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  mlflow.Dockerfile
scripts/: build_features.py  seed_db.py  train.py
src/rimas/: __init__.py  config.py  logging.py
src/rimas/agents/: data_analyst.py  graph.py  inventory.py  marketing.py  nodes.py  state.py  supervisor.py
src/rimas/api/: deps.py  main.py  schemas.py
src/rimas/api/routes/: anomaly.py  health.py  plans.py  predict.py
src/rimas/db/: __init__.py  migrations.py  models.py  session.py
src/rimas/ml/: inference.py  mlflow_client.py
src/rimas/services/: _orchestration_stub.py  orchestration.py  orchestration_langgraph.py  plan_service.py
tests/: conftest.py  test_health.py  test_plans.py
